Update and rename YT2015Rehike.user.css to TubeK15.user.css

--- a/TubeK15.user.css
+++ b/TubeK15.user.css
@@ -1,6 +1,6 @@
 /* ==UserStyle==
-@name           YouTube 2015 for Rehike
-@namespace      github.com/KetaMnight/YouTube-2015-for-Rehike
+@name           TubeK15 for Rehike
+@namespace      github.com/KetaMnight/TubeK15-for-Rehike
 @version        1.0.0
 @description    An attempt to bring back the 2015 layout to Rehike
 @author         KnetaMight
